force-app/main/default/objects/Ativos_do_Contrato__c/Ativos_do_Contrato__c.object-meta.xml
<CustomObject>
    <label>Ativo do Contrato</label>
    <nameField>
        <displayFormat>{00000000}</displayFormat>
        <label>N° de Registro</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Ativos do Contrato</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>