force-app/main/default/objects/Ativos_do_Contrato__c/fields/Aditivo_Contratual_Relacionado__c.field-meta.xml
<CustomField>
    <fullName>Aditivo_Contratual_Relacionado__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Aditivo Contratual Relacionado</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Aditivos_Contratuais__c.Contrato_de_Servi_o_Relacionado__c</field>
            <operation>equals</operation>
            <valueField>$Source.Contrato_de_Servico__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Aditivos_Contratuais__c</referenceTo>
    <relationshipLabel>Ativos do Contrato</relationshipLabel>
    <relationshipName>Ativos_do_Contrato</relationshipName>
    <type>Lookup</type>
</CustomField>