force-app/main/default/objects/Ativos_do_Contrato__c/fields/Ativo_de_Aditivo_del__c.field-meta.xml
<CustomField>
    <fullName>Ativo_de_Aditivo_del__c</fullName>
    <defaultValue>false</defaultValue>
    <label>N° de Aditivos</label>
    <type>Checkbox</type>
</CustomField>