force-app/main/default/objects/Ativos_do_Contrato__c/fields/Ativo_de_Aditivo_s__c.field-meta.xml
<CustomField>
    <fullName>Ativo_de_Aditivo_s__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Quantidade de Aditivos</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>