force-app/main/default/objects/Ativos_do_Contrato__c/fields/Ativo_Locado__c.field-meta.xml
<CustomField>
    <fullName>Ativo_Locado__c</fullName>
    <label>Ativo Locado</label>
    <referenceTo>Asset</referenceTo>
    <relationshipLabel>Ativos do Contrato</relationshipLabel>
    <relationshipName>Ativos_do_Contrato</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>