force-app/main/default/objects/Ativos_do_Contrato__c/fields/C_d_do_Produto__c.field-meta.xml
<CustomField>
    <fullName>C_d_do_Produto__c</fullName>
    <formula>Ativo_Locado__r.Product2.ProductCode</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Cód. do Produto</label>
    <type>Text</type>
</CustomField>