force-app/main/default/objects/Ativos_do_Contrato__c/fields/Contrato_de_Servico__c.field-meta.xml
<CustomField>
    <fullName>Contrato_de_Servico__c</fullName>
    <label>Contrato de Serviço</label>
    <referenceTo>Contrato_de_Servi_o__c</referenceTo>
    <relationshipLabel>Ativos do Contrato</relationshipLabel>
    <relationshipName>Ativos_do_Contrato</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>