force-app/main/default/objects/Ativos_do_Contrato__c/fields/Data_de_entrega__c.field-meta.xml
<CustomField>
    <fullName>Data_de_entrega__c</fullName>
    <label>Data de entrega</label>
    <type>DateTime</type>
</CustomField>