force-app/main/default/objects/Ativos_do_Contrato__c/fields/Data_de_Entrega_formatada__c.field-meta.xml
<CustomField>
    <fullName>Data_de_Entrega_formatada__c</fullName>
    <formula>IF(
DAY(DATEVALUE(Data_de_entrega__c)) &lt; 10,
&apos;0&apos; &amp; TEXT(DAY(DATEVALUE(Data_de_entrega__c))),
TEXT(DAY(DATEVALUE(Data_de_entrega__c)))
)
+ &quot;/&quot; +
IF(
MONTH(DATEVALUE(Data_de_entrega__c)) &lt; 10,
&apos;0&apos; &amp; TEXT(MONTH(DATEVALUE(Data_de_entrega__c))),
TEXT(MONTH(DATEVALUE(Data_de_entrega__c)))
)
+ &quot;/&quot; +
TEXT(YEAR(DATEVALUE(Data_de_entrega__c)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Data de Entrega formatada</label>
    <type>Text</type>
</CustomField>