force-app/main/default/objects/Ativos_do_Contrato__c/fields/Data_de_retorno__c.field-meta.xml
<CustomField>
    <fullName>Data_de_retorno__c</fullName>
    <label>Data de retorno</label>
    <type>Date</type>
</CustomField>