force-app/main/default/objects/Ativos_do_Contrato__c/fields/Data_de_retorno_formatada__c.field-meta.xml
<CustomField>
    <fullName>Data_de_retorno_formatada__c</fullName>
    <formula>IF(
DAY(Data_de_retorno__c) &lt; 10,
&apos;0&apos; &amp; TEXT(DAY(Data_de_retorno__c)),
TEXT(DAY(Data_de_retorno__c))
)
+ &quot;/&quot; +
IF(
MONTH(Data_de_retorno__c) &lt; 10,
&apos;0&apos; &amp; TEXT(MONTH(Data_de_retorno__c)),
TEXT(MONTH(Data_de_retorno__c))
)
+ &quot;/&quot; +
TEXT(YEAR(Data_de_retorno__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Data de retorno (formatada)</label>
    <type>Text</type>
</CustomField>