force-app/main/default/objects/Ativos_do_Contrato__c/fields/Equipamento_no_Cliente__c.field-meta.xml
<CustomField>
    <fullName>Equipamento_no_Cliente__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Equipamento no Cliente</label>
    <type>Checkbox</type>
</CustomField>