force-app/main/default/objects/Ativos_do_Contrato__c/fields/Imagem_do_Ativo__c.field-meta.xml
<CustomField>
    <fullName>Imagem_do_Ativo__c</fullName>
    <formula>Ativo_Locado__r.Imagem_do_Ativo__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Imagem do Ativo</label>
    <type>Text</type>
</CustomField>