force-app/main/default/objects/Ativos_do_Contrato__c/fields/Item_do_Contrato__c.field-meta.xml
<CustomField>
    <fullName>Item_do_Contrato__c</fullName>
    <label>Item do Contrato</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>