force-app/main/default/objects/Ativos_do_Contrato__c/fields/Local_de_Entrega__c.field-meta.xml
<CustomField>
    <fullName>Local_de_Entrega__c</fullName>
    <label>Local de Entrega</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>