force-app/main/default/objects/Ativos_do_Contrato__c/fields/N_de_S_rie__c.field-meta.xml
<CustomField>
    <fullName>N_de_S_rie__c</fullName>
    <formula>Ativo_Locado__r.SerialNumber</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>N° de Série</label>
    <type>Text</type>
</CustomField>