force-app/main/default/objects/Ativos_do_Contrato__c/fields/N_Serie__c.field-meta.xml
<CustomField>
    <fullName>N_Serie__c</fullName>
    <label>N_Serie*</label>
    <length>255</length>
    <type>Text</type>
</CustomField>