force-app/main/default/objects/Ativos_do_Contrato__c/fields/Nome_do_ativo__c.field-meta.xml
<CustomField>
    <fullName>Nome_do_ativo__c</fullName>
    <formula>Ativo_Locado__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Nome do ativo</label>
    <type>Text</type>
</CustomField>