force-app/main/default/objects/Ativos_do_Contrato__c/fields/Observa_o_Descri_o__c.field-meta.xml
<CustomField>
    <fullName>Observa_o_Descri_o__c</fullName>
    <label>Descrição do Produto/Serviço</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>