force-app/main/default/objects/Ativos_do_Contrato__c/fields/Quantidade_Atual__c.field-meta.xml
<CustomField>
    <fullName>Quantidade_Atual__c</fullName>
    <formula>IF(Aditivo_Contratual_Relacionado__c	== null, Quantidade__c +  Quantidade_Adicionada_Aditivo__c -  Quantidade_Suprimida_Aditivo__c, Quantidade__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Quantidade Atual</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>