force-app/main/default/objects/Ativos_do_Contrato__c/fields/Quantidade_Suprimida_Aditivo__c.field-meta.xml
<CustomField>
    <fullName>Quantidade_Suprimida_Aditivo__c</fullName>
    <label>Quantidade Suprimida (Aditivo)</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>