force-app/main/default/objects/Ativos_do_Contrato__c/fields/Substituido_por__c.field-meta.xml
<CustomField>
    <fullName>Substituido_por__c</fullName>
    <label>Substituido por</label>
    <length>255</length>
    <type>Text</type>
</CustomField>