force-app/main/default/objects/Ativos_do_Contrato__c/fields/URL_da_Imagem__c.field-meta.xml
<CustomField>
    <fullName>URL_da_Imagem__c</fullName>
    <formula>Ativo_Locado__r.Product2.URL_da_Imagem__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>URL da Imagem</label>
    <type>Text</type>
</CustomField>