force-app/main/default/objects/Ativos_do_Contrato__c/fields/Valor_Adicionado__c.field-meta.xml
<CustomField>
    <fullName>Valor_Adicionado__c</fullName>
    <label>Valor Adicionado</label>
    <precision>11</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>