force-app/main/default/objects/Ativos_do_Contrato__c/fields/Valor_Mensal_Atual__c.field-meta.xml
<CustomField>
    <fullName>Valor_Mensal_Atual__c</fullName>
    <formula>IF(Aditivo_Contratual_Relacionado__c == null, Valor_Total_Mensal__c +  Valor_Adicionado__c -  Valor_Suprimido__c ,  Valor_Total_Mensal__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Valor Mensal Atual</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>