force-app/main/default/objects/Ativos_do_Contrato__c/fields/Valor_Suprimido__c.field-meta.xml
<CustomField>
    <fullName>Valor_Suprimido__c</fullName>
    <label>Valor Suprimido</label>
    <precision>11</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>