force-app/main/default/objects/Ativos_do_Contrato__c/fields/Valor_Total_Mensal__c.field-meta.xml
<CustomField>
    <fullName>Valor_Total_Mensal__c</fullName>
    <formula>Valor_Unitario_Mensal__c *  Quantidade__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Valor Total Periódico</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>