force-app/main/default/objects/Ativos_do_Contrato__c/fields/Valor_Total_Mensal_Atual__c.field-meta.xml
<CustomField>
    <fullName>Valor_Total_Mensal_Atual__c</fullName>
    <label>Valor Total Mensal Atual</label>
    <precision>11</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>