force-app/main/default/objects/Ativos_do_Contrato__c/fields/Valor_Unitario_Mensal__c.field-meta.xml
<CustomField>
    <fullName>Valor_Unitario_Mensal__c</fullName>
    <label>Valor Unitário Periódico</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>